--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Editor from '../components/Editor.jsx';
 import { getRootPage } from '../lib/fetchPages.js';
-import "../assets/style.css";
+import "../styles/global.css";
 
 const data = await getRootPage();
 ---
