--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,6 @@ import "../styles/global.css";
 const data = await getRootPage();
 ---
 
-
-<div class="fade-in">
+<div class="shake-in">
 <Editor client:only="react" data={data.data} />
 </div>
