--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,6 @@ import "../styles/global.css";
 const data = await getRootPage();
 ---
 
-<div class="shake-in" style="overflow: hidden;">
+<div class="overflow-hidden">
 <Editor client:only="react" data={data.data} />
 </div>
