--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,14 +1,20 @@
 /* the props */
 @import "open-props/style";
-@import "open-props/fonts";
 @import "open-props/animations";
 
+body {
+  margin: 0;
+}
+
 .fade-in {
-    animation: var(--animation-fade-in) forwards;
-  }
-  
+  animation:
+    var(--animation-fade-in) forwards,
+    var(--animation-slide-in-down);
+  animation-duration: .2s;
+}
+
 .font-size-8 {
-    font-size: var(--font-size-8);
+  font-size: var(--font-size-8);
 }
 
 .shake-in {
@@ -16,4 +22,8 @@
     var(--animation-shake-y),
     var(--animation-fade-in),
     var(--animation-slide-in-left);
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
