--- a/src/pages/index copy.astro
+++ b/src/pages/index copy.astro
@@ -1,6 +1,7 @@
 ---
 import Editor from '../components/Editor.jsx';
 import { getRootPage } from '../lib/fetchPages.js';
+import "../styles/global.css";
 import CaptchaForm from '../components/CaptchaForm.jsx';
 
 const data = await getRootPage();
@@ -8,12 +9,9 @@ const data = await getRootPage();
 
 <div class="overflow-hidden">
 <Editor client:only="react" data={data.data} />
+<CaptchaForm onSubmit={() => {
+  // Your form submission logic here
+}} />
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/@cap.js/widget"></script>
-
-<style>
-.overflow-hidden {
-  overflow: hidden;
-}
-</style>
