--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,4 +9,4 @@ const data = await getRootPage();
 <Editor client:only="react" data={data.data} />
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/@cap.js/widget"></script>
+<script src="https://cdn.jsdelivr.net/npm/@cap.js/widget" defer loading="lazy"></script>
