--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,11 @@
 ---
-import Editor from '../components/Editor.jsx';
 import { getRootPage } from '../lib/fetchPages.js';
+import Editor from '../components/Editor.jsx';
 
 const data = await getRootPage();
+ 
 ---
 
 <div class="overflow-hidden">
-<Editor client:only="react" data={data.data} />
+  <Editor data={data.data} />
 </div>
-
-<script src="https://cdn.jsdelivr.net/npm/@cap.js/widget" defer loading="lazy"></script>
