--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import { getRootPage } from '../lib/fetchPages.js';
-import Editor from '../components/Editor.jsx';
+import Editor from '../components/Puck.jsx';
 
 const data = await getRootPage();
  
