--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,3 +9,5 @@ const data = await getRootPage();
 <div class="overflow-hidden">
   <Puck data={data.data} />
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/@cap.js/widget"></script>
