--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,10 @@ const data = await getRootPage();
  
 ---
 
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
 <div class="overflow-hidden">
   <Puck data={data.data} />
 </div>
