--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,8 +9,15 @@ const data = await getRootPage();
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+    }
+  </style>
 </head>
 
-<div class="overflow-hidden">
+<div>
   <Puck data={data.data} />
 </div>
