--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,21 +3,24 @@ import { getRootPage } from '../lib/fetchPages.js';
 import Puck from '../components/Puck.jsx';
 
 const data = await getRootPage();
- 
 ---
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-    }
-  </style>
-</head>
-
-<div>
-  <Puck data={data.data} />
-</div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+      }
+    </style>
+  </head>
+  <body>
+    <div>
+      <Puck data={data.data} />
+    </div>
+  </body>
+</html>
