--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,8 @@ import Puck from '../components/Puck.jsx';
 const data = await getRootPage();
 ---
 
-
+<body>
     <div>
       <Puck data={data.data} />
     </div>
+</body>
