--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import { getRootPage } from '../lib/fetchPages.js';
 import Puck from '../components/Puck.jsx';
+import '../styles/global.css';
 
 const data = await getRootPage();
 ---
