--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ const data = await getRootPage();
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
   <body class="min-h-screen bg-white dark:bg-gray-900">
-    <div class="container mx-auto px-4">
+    <div class="">
       <Puck data={data.data} />
     </div>
   </body>
