--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ const data = await getRootPage();
   </head>
   <body class="min-h-screen bg-white dark:bg-gray-900">
     <div class="">
-      <Puck data={data.data} client:visible />
+      <Puck data={data.data} />
     </div>
   </body>
 </html>
